gcc/testsuite/rust/rustc/ui/issues/issue-27060-2.rs
#[repr(packed)]
pub struct Bad<T: ?Sized> {
    data: T, // { dg-error ".E0277." "" { target *-*-* } }
}

fn main() {}

